<?xml version="1.0"?>
<package>
  <name>robotis_description</name>
  <version>0.0.0</version>
  <description>The robotis_description package</description>

  <maintainer email="sch@robotis.com">sch</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
